--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,6 +20,6 @@
     ],
     "start_url": ".",
     "display": "standalone",
-    "theme_color": "#f4f5fe",
+    "theme_color": "#212529",
     "background_color": "#ffffff"
 }
