--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
+        "axios": "^0.24.0",
         "bootstrap": "^5.1.3",
         "css-loader": "^6.5.1",
         "esri-leaflet": "^2.2.3",
